# static/swagger.json
@@ -337,6 +337,31 @@
           }
         }
       }
+    },
+    "/api/blogs/{id}/text": {
+      "get": {
+        "operationId": "getBlogText",
+        "parameters": [
+          {
+            "name": "id",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "number"
+            }
+          }
+        ],
+        "tags": [
+          "blog"
+        ],
+        "responses": {
+          "200": {
+            "schema": {
+              "type": "string"
+            }
+          }
+        }
+      }
     }
   },
   "definitions": {
